add specific email-endpoint to send KomMonitor Feedback mails
